# clearpath_assignment_2

./: README.md
clearpath/: robot.srdf  robot.urdf.xacro  robot.yaml
clearpath/manipulators/config/: moveit.yaml
clearpath/platform/config/: imu_filter.yaml  localization.yaml
clearpath/platform/launch/: platform-service.launch.py
clearpath/sensors/config/: camera_0.yaml  lidar2d_0.yaml
clearpath/sensors/launch/: camera_0.launch.py  imu_0.launch.py  lidar2d_0.launch.py  lidar3d_0.launch.py  sensors-service.launch.py
clearpath_assignment_2/: CMakeLists.txt  package.xml
clearpath_assignment_2/config/a200/: m-explore.yaml  nav2.yaml  slam.yaml
clearpath_assignment_2/launch/: m-explore.launch.py  nav2.launch.py  slam.launch.py
person_orientation/: setup.py
person_orientation/person_orientation/: Backup.txt  package.xml  person_orientation_node.py  setup.cfg
